--- a/loader.html
+++ b/loader.html
@@ -6,6 +6,9 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
    <title>Syed Sana Ullah</title>
+  <link rel="stylesheet" href="notificatin.css">
+ <!-- constom js link -->
+ <script src="noticication.js"></script>
 <!-- In your HTML head section, add Ionicons -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -48,7 +51,7 @@
   <!--End of Tawk.to Script -->
  <body>
  
-
+<div id="warning-container"></div>
  
 
 
@@ -1836,9 +1839,7 @@ function checkLoginState() {
         <header>
           <h2 class="h2 article-title">Tools</h2>
         </header>
-                <div class="warning-box">
-          <p>We are currently experiencing technical difficulties with some of our tools. To ensure optimal functionality, Please scroll through each section horizontally to access all features. You can utilize our search tool below to find specific tool.<br> New Update is coming for to pin a tool. </p>
-        </div>
+              
 
         <div class="tool-select-container">
           <select name="tools-select" id="tools-select" class="searchable">
