--- a/notification.html
+++ b/notification.html
@@ -36,9 +36,20 @@
     <!-- warning.html -->
 <template id="warningBox">
     <div class="warning-box">
-      <span class="close-btn" onclick="hideWarning()">&times;</span>
-      <p>We are currently experiencing technical difficulties with some of our tools. To ensure optimal functionality, please scroll through each section horizontally to access all features. You can utilize our search tool below to find a specific tool.<br>New update is coming to pin a tool.</p>
-    </div>
+  <span class="close-btn" onclick="hideWarning()">&times;</span>
+  <p>
+    <strong>Notice: Temporary Technical Adjustments</strong><br><br>
+    We're currently optimizing our tools for better performance. For full access, please scroll horizontally through each section. Use the search tool to locate specific features.
+    <br><br>
+    <strong>Upcoming Improvements:</strong><br>
+    • Redesigned tool interface<br>
+    • New useful tools<br>
+    • Full color scheme refresh<br>
+    • Streamlined page layouts
+    <br><br>
+    Updates will be deployed soon. Thank you for your patience.
+  </p>
+</div>
   </template>
        
 </body>
